--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+
 html,
 body {
   padding: 0;
@@ -7,6 +8,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+
 html{
   scrollbar-width: thin;
   scrollbar-color: #1e8be1 rgb(219, 216, 216);
@@ -15,6 +17,7 @@ html{
 body{
   width: 100%;
   height: 100%;
+  padding-top:55px;
 }
 
 a {
