--- a/styles/services/payments.module.css
+++ b/styles/services/payments.module.css
@@ -1,28 +1,27 @@
-
-.container{
+.container {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     padding: 30px 0;
-    gap :30px;
+    gap: 30px;
 }
 
-.container .box{
+.container .box {
     position: relative;
     width: 300px;
-    height:400px;
+    height: 400px;
     margin-bottom: 50px;
     background-color: #2e2e2e;
     display: flex;
     justify-content: center;
     align-items: center;
-   
+
 }
 
-.container .box::before{
-    content:'';
+.container .box::before {
+    content: '';
     position: absolute;
     inset: -10px 200px;
     border-top: 4px solid #89ec5b;
@@ -32,14 +31,14 @@
     transition: 0.5s ease-in-out;
 }
 
-.container .box:hover::before{
+.container .box:hover::before {
     transform: skewY(0deg);
     inset: -10px 40px;
 
 }
 
-.container .box::after{
-    content:'';
+.container .box::after {
+    content: '';
     position: absolute;
     inset: 200px -10px;
     border-left: 4px solid var(--primary);
@@ -49,32 +48,32 @@
     transition: 0.5s ease-in-out;
 }
 
-.container .box:hover::after{
+.container .box:hover::after {
     transform: skew(0deg);
     inset: 40px -10px;
 }
 
 
-.container .box .content{
+.container .box .content {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    gap:20px;
+    gap: 20px;
     padding: 0 20px;
     width: 100%;
     height: 100%;
     overflow: hidden;
 }
 
-.container .box .content .icon{
+.container .box .content .icon {
     color: #89ec5b;
     width: 80px;
     height: 80px;
     box-shadow: 0 0 0 4px #2e2e2e,
-    0 0 0 6px #89ec5b;
+        0 0 0 6px #89ec5b;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -83,39 +82,39 @@
     transition: 0.5s ease-in-out;
 }
 
-.container .box:hover .content .icon{
+.container .box:hover .content .icon {
     background: #89ec5b;
-    color:#2e2e2e;
+    color: #2e2e2e;
     box-shadow: 0 0 0 4px #2e2e2e,
-    0 0 0 300px #89ec5b;
+        0 0 0 300px #89ec5b;
 }
 
-.container .box .content .text h3{
+.container .box .content .text h3 {
 
     font-size: 1.5em;
-    color:#fff;
+    color: #fff;
     font-weight: 500;
     transition: 0.5s ease-in-out;
 
 }
 
-.container .box:hover .content .text h3{
-    color:#2e2e2e;
-}  
+.container .box:hover .content .text h3 {
+    color: #2e2e2e;
+}
 
-.container .box .content .text p{
-    color:#999;
+.container .box .content .text p {
+    color: #999;
     transition: 0.5s ease-in-out;
 }
 
-.container .box:hover .content .text p{
-    color:#2e2e2e;
+.container .box:hover .content .text p {
+    color: #2e2e2e;
 }
 
-.container .box .content .text a{
+.container .box .content .text a {
     position: relative;
     background: #89ec5b;
-    color:#2e2e2e;
+    color: #2e2e2e;
     padding: 8px 15px;
     display: inline-block;
     text-decoration: none;
@@ -124,12 +123,362 @@
     transition: 0.5s ease-in-out;
 }
 
-.container .box:hover .content .text a{
+.container .box:hover .content .text a {
     background: #2e2e2e;
-    color:#89ec5b;
+    color: #89ec5b;
+
+}
+
+.floatingImg {
+    animation: floatAnim 3s ease-in-out infinite;
+}
+
+@keyframes floatAnim {
+    0% {
+        transform: translate(0px, 0px);
+    }
+
+    50% {
+        transform: translate(0px, 20px);
+    }
+
+    100% {
+        transform: translate(0px, 0px);
+    }
+}
+
+.myBG {
+    background-image: url('../../public/services/images/paymentsBackWave.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
+
+.card_outer {
+    width: 280px;
+    height: 230px;
+    /* border-radius: 20px; */
+    background-color: pink;
+    position: relative;
+    border-bottom-left-radius: 30px;
+
+
+}
+
+.card {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    /* border-radius: 20px; */
+    border-bottom-left-radius: 30px;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    font-weight: 400;
+    font-size: 24px;
+    font-family: Alexandria;
+    color: white;
+    /* background-image: url('../../public/services/images/mobilePayment.webp'); */
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../public/services/images/mobilePayment.webp');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* transition: 2s -webkit-filter linear; */
+    transition: 0.5s ease-in-out;
+
+}
+
+
+.car_footer {
+    position: absolute;
+    bottom: 0;
+    height: 27%;
+    width: 100%;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    background-color: rgb(218, 98, 208);
+    z-index: 2;
+    color: #fff;
+    transition: height 0.5s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.card_outer:hover .card {
+    filter: blur(6px);
+    -webkit-filter: blur(6px);
+}
+
+.card_outer:hover .car_footer {
+    height: 90%;
+    /* background-color: rgba(0, 0, 255, 0.253); */
+    background-color: rgba(136, 31, 125, 0.459);
+
 
 }
 
 
 
+.card_desc {
+    box-sizing: border-box;
+    padding: 10px;
+    display: none;
+    color: white;
 
+    /* transition: display 0.5s; */
+}
+
+/* .card:hover .card_desc{
+    display:block;
+} */
+
+
+.card_outer:hover .card_desc {
+    display: block;
+    filter: blur(0);
+    /* animation: fade_in_show 0.5s */
+}
+
+@keyframes fade_in_show {
+    0% {
+        opacity: 0;
+        transform: scale(0)
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1)
+    }
+}
+
+.car_footer_readMore {
+    text-align: center;
+    font-weight: 400;
+    font-size: 17px;
+    font-family: Alexandria;
+    color: white;
+}
+
+.card_outer:hover .car_footer_readMore {
+    display: none;
+    animation: fade_in_show 0.5s
+}
+
+.ProcessorBG {
+    background-image: url('../../public/services/images/processorbg.jpg');
+    /* background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('../../public/services/images/mobilePayment.webp'); */
+    /* background-position: center; */
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+/* .processsorElement {
+    transition: 0.3s ease-in-out;
+}
+
+.processsorElement:hover {
+    transform: scale(1.05);
+    background-color: rgb(248, 218, 252);
+    border-radius: 5px;
+    z-index: 2;
+} */
+
+.drop {
+    position: relative;
+    /* margin:100px; */
+    width: 300px;
+    height: 300px;
+    /* background-color: #333; */
+    box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05),
+        25px 35px 20px rgba(0, 0, 0, 0.05),
+        25px 30px 30px rgba(0, 0, 0, 0.05),
+        inset -20px -20px 25px rgba(255, 255, 255, 0.9);
+    border-radius: 47% 53% 70% 30% / 31% 44% 56% 69%;
+    transition: 0.5s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.drop:hover {
+    border-radius: 50% !important
+}
+
+.drop:before {
+    content: '';
+    position: absolute;
+    top: 50px;
+    left: 90px;
+    width: 35px;
+    height: 35px;
+    background: #fff;
+    border-radius: 50%;
+    opacity: 0.9;
+}
+
+.drop:after {
+    content: '';
+    position: absolute;
+    top: 90px;
+    left: 110px;
+    width: 15px;
+    height: 15px;
+    background: #fff;
+    border-radius: 50%;
+    opacity: 0.9;
+}
+
+.drop .content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 40px;
+
+}
+
+.drop .contentDesc {
+    opacity: 0;
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    background-color: #eff0f4;
+    transition: opacity 1s ease-in-out;
+}
+
+.drop:hover .contentDesc {
+    opacity: 1;
+    height: 90%;
+    width: 90%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 3;
+    background-color: #fdcccc;
+    padding: 40px;
+    border-radius: 50%;
+}
+
+.drop:hover .content {
+    display: none;
+}
+
+.contentDesc p {
+    /* font-family: 'Alexandria'; 
+    font-weight: 400;
+    color:rgb(83, 82, 82) */
+}
+
+.drop .content h2 {
+    position: relative;
+    width: 65px;
+    height: 65px;
+    margin: 0;
+    margin-left: 20px;
+    background: #eff0f4;
+    border-radius: 50%;
+    box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.1),
+        inset -2px -5px 10px rgba(255, 255, 255, 1),
+        15px 15px 10px rgba(0, 0, 0, 0.05),
+        15px 10px 15px rgba(0, 0, 0, 0.025);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+}
+
+.drop .content a {
+
+    position: relative;
+    padding: 10px 25px;
+    background-color: #ff0f5b;
+    text-decoration: none;
+    color: #fff;
+    border-radius: 25px;
+    font-weight: 500;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+    opacity: 0.75;
+    transition: 0.5s;
+}
+
+.drop .content h1 {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-family: 'Alexandria';
+    color: #301c46;
+    font-weight: 500;
+    font-size: 29px;
+}
+
+.drop .content a:hover {
+    opacity: 1;
+}
+
+.walletHead {
+    color: white;
+    text-shadow: 0 13.36px 8.896px #7e7b78, 0 -2px 1px #fff;
+    /* color:#eff0f4;
+    text-shadow: 0 13.36px 8.896px #7e7b78,0 -2px 1px #fff; */
+}
+
+.mobile_card {
+    height: 385px;
+    width: 285px;
+    box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.1);
+    padding: 30px;
+    font-family: 'Alexandria';
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    transition: 0.3s ease-in-out;
+}
+
+.mobile_card:hover{
+    transform :scale(1.05);
+    /* background-color:#fbf7fc; */
+    box-shadow: 0px 13px 18px rgba(0, 0, 0, 0.3);
+}
+
+.mobile_card h3 {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.mobile_card p {
+    font-weight: 300;
+    color: #686669
+}
+
+.mobile__card_logo {
+    position: relative;
+    height: 80px;
+    width: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f6f7;
+    border-radius: 55% 45% 62% 38% / 39% 50% 50% 61%;
+}
+
+.actualLogo {
+    height: 40px;
+    width: 40px;
+    color: #c241d9;
+}
+
+.mobile__card_logo::before {
+    position: absolute;
+    content: '';
+    height: 80px;
+    width: 110px;
+    bottom: 7px;
+    /* background-color: red; */
+    border: 1px solid #e6e7e8;
+    /* transform: skewY(15deg); */
+    border-radius: 55% 45% 62% 38% / 39% 50% 50% 61%;
+}
