--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,3 @@
-
 html,
 body {
   padding: 0;
@@ -9,15 +8,15 @@ body {
 }
 
 
-html{
+html {
   scrollbar-width: thin;
   scrollbar-color: #1e8be1 rgb(219, 216, 216);
 }
 
-body{
+body {
   width: 100%;
   height: 100%;
-  padding-top:55px;
+  padding-top: 55px;
 }
 
 a {
@@ -29,21 +28,22 @@ a {
   box-sizing: border-box;
 }
 
-.homeSpan{
-  color :pink;
+.homeSpan {
+  color: pink;
 }
 
 @media (prefers-color-scheme: light) {
   html {
-    font-family:'Alexandria'
+    font-family: 'Alexandria'
   }
-    body {
-      color: black;
-      background: white;
-      position: relative;
-      width: 100%;
-      height: 100vh;
-    }
+
+  body {
+    color: black;
+    background: white;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+  }
 }
 
 /* lines background animation css */
@@ -59,11 +59,11 @@ a {
   opacity: 0.15;
   stroke: #CE1B5F;
   stroke-width: 12;
-  stroke-miterlimit:10;
+  stroke-miterlimit: 10;
   animation: show 4s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out; 
+  animation-timing-function: ease-in-out;
 }
 
 #blue {
@@ -71,7 +71,7 @@ a {
   opacity: 0.15;
   stroke: #06A1C4;
   stroke-width: 12;
-  stroke-miterlimit:10;
+  stroke-miterlimit: 10;
   animation: show 4s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
@@ -83,32 +83,35 @@ a {
   opacity: 0.15;
   stroke: #06A1C4;
   stroke-width: 6;
-  stroke-miterlimit:10;
+  stroke-miterlimit: 10;
   stroke-dasharray: 200;
   stroke-dashoffset: 800;
   animation: draw 4s;
   animation-fill-mode: forwards;
   animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;    
+  animation-timing-function: ease-in-out;
 }
 
 @keyframes draw {
   to {
     stroke-dashoffset: 0;
- }
-    }
+  }
+}
 
 @keyframes show {
   0% {
     opacity: 0.15;
- }
+  }
+
   50% {
     opacity: 0.2;
- }
+  }
+
   100% {
     opacity: 0.15;
- }
-    }
+  }
+}
 
-
-
+.css-i4bv87-MuiSvgIcon-root {
+  color: blue!important
+}
