--- a/styles/aboutus/aboutus.module.css
+++ b/styles/aboutus/aboutus.module.css
@@ -5,27 +5,6 @@
     background-repeat: no-repeat;
 }
 
-.leader2BG {
-    background-image: url('../../public/aboutus/images/leaders/leader2.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.leader3BG {
-    position: relative;
-    background-image: url('../../public/aboutus/images/leaders/leader3.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-.leader4BG {
-    position: relative;
-    background-image: url('../../public/aboutus/images/leaders/leader4.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
-
 
 
 
@@ -53,3 +32,18 @@
     border:1px solid rgb(199, 134, 243);
     z-index: -99;
 } */
+
+
+.OurmissionLeftSection{
+    position: relative;
+    background-image: url('../../public/aboutus/images/ourmission/leftSectionOurMission.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.OurmissionRightSection{
+    position: relative;
+    background-image: url('../../public/aboutus/images/ourmission/rightSectionOurMission.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
