Added career page and made it responsive

--- a/styles/home/whyus.module.css
+++ b/styles/home/whyus.module.css
@@ -24,6 +24,13 @@
 
   .circles3{
     animation: moveAround 5s linear infinite;
+    display:block;
+  }
+
+  @media (max-width:768px){
+    .circles3{
+    display:none;
+    }
   }
 
 
