--- a/styles/services/payments.module.css
+++ b/styles/services/payments.module.css
@@ -434,6 +434,13 @@
     transition: 0.3s ease-in-out;
 }
 
+@media (max-width: 768px) {
+    .mobile_card {
+        height: auto;
+        width: 100%;
+    }
+}
+
 .mobile_card:hover{
     transform :scale(1.05);
     /* background-color:#fbf7fc; */
