Added Join us in life at BNT page

--- a/styles/aboutus/lifeatbnt.module.css
+++ b/styles/aboutus/lifeatbnt.module.css
@@ -28,3 +28,23 @@
     letter-spacing: -4px;
     color: #fff;
 }
+
+
+.joinUs{
+    position: relative;
+    z-index: 1;
+}
+
+.joinUs::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-image: url('../../public/aboutus/images/joinUs4.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    filter: blur(1px);
+  }
