--- a/styles/services/payments.module.css
+++ b/styles/services/payments.module.css
@@ -156,7 +156,7 @@
 
 .card_outer {
     /* border-radius: 20px; */
-    background-color: pink;
+    /* background-color: pink; */
     position: relative;
     border-bottom-left-radius: 30px;
 }
@@ -193,7 +193,7 @@
     width: 100%;
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
-    background-color: rgb(218, 98, 208);
+    /* background-color: rgb(218, 98, 208); */
     z-index: 2;
     color: #fff;
     transition: height 0.5s;
