Compressed all images on homepage

--- a/styles/home/whyus.module.css
+++ b/styles/home/whyus.module.css
@@ -1,8 +1,8 @@
-.myBG{
+/* .myBG{
     background-image: url('../../public/home/images/blobgreencross.svg');
     background-size: cover;
     background-repeat: no-repeat;
-  }
+  } */
 
   .headingH1{
     color: transparent!important;
