--- a/styles/home/services.module.css
+++ b/styles/home/services.module.css
@@ -6,19 +6,14 @@
 }
 
 .section1{
-    background-image: url('../../public/home/images/whyus/payment3.jpg');
-    /* height:350px;
-    background:linear-gradient(to left,rgba(0,0,0,0.8),rgba(0,0,0,0),rgba(0,0,0,0)), url('../public/images/whyus/c4.jpg');
-    background-attachment: fixed;
-    background-size: cover;
-    color:'#fff'; */
+    background-image: url('../../public/home/images/whyus/paymentServiceMIn.webp');
 }
 .section2{
-    background-image: url('../../public/home/images/whyus/retail.jpg');
+    background-image: url('../../public/home/images/whyus/retailServiceMin.webp');
 }
 .section3{
-    background-image: url('../../public/home/images/whyus/expert.jpg');
+    background-image: url('../../public/home/images/whyus/expertServiceMin.webp');
 }
 .section4{
-    background-image: url('../../public/home/images/whyus/startup.jpg');
+    background-image: url('../../public/home/images/whyus/startupServiceMin.webp');
 }
