--- a/styles/aboutus/lifeatbnt.module.css
+++ b/styles/aboutus/lifeatbnt.module.css
@@ -1,6 +1,6 @@
 .myBG {
     /* background-image: url('../../public/aboutus/images/lifeatbntBg.jpg'); */
-    background: linear-gradient(rgba(30, 9, 87, 0.6),rgba(30, 9, 87, 0.6)), url('../../public/career/images/careerBG.jpg');
+    background: linear-gradient(rgba(30, 9, 87, 0.6),rgba(30, 9, 87, 0.6)), url('../../public/career/images/careerBGMin.webp');
     background-size: cover;
     background-repeat: no-repeat;
     /* background-attachment: fixed; */
