--- a/styles/services/payments.module.css
+++ b/styles/services/payments.module.css
@@ -191,8 +191,8 @@
     bottom: 0;
     height: 27%;
     width: 100%;
-    border-top-left-radius: 30px;
-    border-bottom-left-radius: 30px;
+    /* border-top-left-radius: 30px; */
+    /* border-bottom-left-radius: 30px; */
     /* background-color: rgb(218, 98, 208); */
     z-index: 2;
     color: #fff;
