--- a/styles/aboutus/aboutus.module.css
+++ b/styles/aboutus/aboutus.module.css
@@ -10,18 +10,20 @@
     background-color: rgba(15, 15, 14, 0.15);
     position: absolute;
     display:flex;
-    align-items: center;
-    justify-content: center;
+    align-items: end;
+    justify-content: center;    
     bottom: 0;
     /* display: none; */
     opacity: 0;
+    padding-bottom:0px;
     width: 100%;
     cursor:pointer;
-    transition: height 0.4s ease-in-out;
+    transition: height 0.4s ease-in-out, padding-bottom 0.4s ease-in-out;
 }
 
 .leaders:hover .linkedinBox {
     height: 100%;
+    padding-bottom:50px;
     opacity: 1;
 }
 
