Update the color to blue  and images

--- a/styles/services/payments.module.css
+++ b/styles/services/payments.module.css
@@ -417,7 +417,7 @@
 }
 
 .walletHead {
-    color: white;
+    color: #1e8be1;
     text-shadow: 0 13.36px 8.896px #7e7b78, 0 -2px 1px #fff;
     /* color:#eff0f4;
     text-shadow: 0 13.36px 8.896px #7e7b78,0 -2px 1px #fff; */
