--- a/styles/aboutus/lifeatbnt.module.css
+++ b/styles/aboutus/lifeatbnt.module.css
@@ -14,14 +14,14 @@
     
 }
 
-.photoGridImgBack img{
+/* .photoGridImgBack img{
     transition: 0.4s ease;
 }
 
 .photoGridImgBack img:hover{
     transform: scale(1.2);
     -webkit-transform: scale(1.2);
-}
+} */
 
 .textShadow {
       text-shadow: 0 13.36px 8.896px #2c482e, 0 -2px 1px #fff;
